Make vscode the editor for processes launched from integrated terminal.

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -693,5 +693,6 @@
     "editor.defaultFormatter": "ms-python.black-formatter",
     "[shellscript]": {
         "editor.defaultFormatter": "foxundermoon.shell-format"
-    }
+    },
+    "git.terminalGitEditor": true
 }
