--- a/stow_packages/kitty/.config/kitty/kitty.conf
+++ b/stow_packages/kitty/.config/kitty/kitty.conf
@@ -301,7 +301,7 @@
 
 #: Scrollback {{{
 
-# scrollback_lines 2000
+scrollback_lines 20000
 
 #: Number of lines of history to keep in memory for scrolling back.
 #: Memory is allocated on demand. Negative numbers are (effectively)
@@ -771,8 +771,8 @@
 #: Window layout {{{
 
 # remember_window_size  yes
-# initial_window_width  640
-# initial_window_height 400
+initial_window_width  640
+initial_window_height 600
 
 #: If enabled, the OS Window size will be remembered so that new
 #: instances of kitty will have the same size as the previous
@@ -951,7 +951,7 @@
 
 #: Tab bar {{{
 
-# tab_bar_edge bottom
+tab_bar_edge top
 
 #: The edge to show the tab bar on, top or bottom.
 
@@ -966,7 +966,7 @@
 #: The second number is the margin between the tab bar and the
 #: contents of the current tab.
 
-# tab_bar_style fade
+tab_bar_style powerline
 
 #: The tab bar style, can be one of:
 
