--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -29,7 +29,6 @@
         }
     },
     "[python]": {
-        "editor.defaultFormatter": "ms-python.python",
         "editor.formatOnType": true
     },
     "[yaml]": {
@@ -577,7 +576,7 @@
     "python.analysis.indexing": true,
     "python.analysis.typeCheckingMode": "basic",
     "python.condaPath": "/home/gbiamby/mambaforge/condabin/mamba",
-    "python.defaultInterpreterPath": "/home/gbiamby/mambaforge/envs/sem_env/bin/python",
+    "python.defaultInterpreterPath": "/home/gbiamby/mambaforge/envs/rpt/bin/python",
     "python.diagnostics.sourceMapsEnabled": true,
     "python.envFile": "${workspaceFolder}/.env",
     "python.languageServer": "Pylance",
@@ -692,5 +691,6 @@
     "[shellscript]": {
         "editor.defaultFormatter": "foxundermoon.shell-format"
     },
-    "git.terminalGitEditor": true
+    "git.terminalGitEditor": true,
+    "window.zoomLevel": 1
 }
