--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,7 +69,13 @@
         "titleBar.activeForeground": "#15202b",
         "titleBar.inactiveBackground": "#909ca799",
         "titleBar.inactiveForeground": "#15202b99",
-        "commandCenter.border": "#15202b99"
+        "commandCenter.border": "#15202b99",
+        "editorGroup.border": "#acb5be",
+        "panel.border": "#acb5be",
+        "sideBar.border": "#acb5be",
+        "statusBar.debuggingBackground": "#a79b90",
+        "statusBar.debuggingForeground": "#15202b",
+        "tab.activeBorder": "#acb5be"
     },
     "peacock.remoteColor": "#1857a4",
 }
