--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -587,6 +587,10 @@
         {
             "name": "Skeletor Purple",
             "value": "#6c1cfe"
+        },
+        {
+            "name": "DarkPurp",
+            "value": "#190777"
         }
     ],
     "python.analysis.autoImportCompletions": true,
