--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -18,7 +18,7 @@
         "editor.defaultFormatter": "vscode.json-language-features"
     },
     "[latex]": {
-        "editor.defaultFormatter": "nickfode.latex-formatter"
+        "editor.defaultFormatter": "mathematic.vscode-latex"
     },
     "[markdown]": {
         "editor.defaultFormatter": "mervin.markdown-formatter",
