--- a/stow_packages/tmux/.tmux.conf
+++ b/stow_packages/tmux/.tmux.conf
@@ -35,6 +35,9 @@ set -sg escape-time 1
 # don't rename windows automatically
 set -g allow-rename off
 
+# Set history scrollback buffer size
+set -g history-limit 1000000
+
 # mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
 
@@ -48,7 +51,8 @@ bind -n M-Down select-pane -D
 set-window-option -g mode-keys vi
 
 # set default terminal mode to 256 colors
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
+set -g default-terminal "${TERM}"
 set -g terminal-overrides ",xterm:Tc"
 
 
