--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -495,6 +495,7 @@
         "**/data/tests/eval*": true,
         "**/datasets/**": true,
         "**/experiments/**": true,
+        "**/mambaforge/**": true,
         "**/messages/messages/**": true,
         "**/mmcv/tests/**": true,
         "**/semafor/datalake/**": true,
