Add Ctrl+Alt+u Ctrl+Alt+l vscode key bindings for uppercase/lowercase

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -103,6 +103,7 @@
         "aperiodicity",
         "API's",
         "Aptima",
+        "Aquantia",
         "arange",
         "ARPU",
         "Arslan",
@@ -339,6 +340,7 @@
         "rcfile",
         "rcnn",
         "realpath",
+        "Realtek",
         "recents",
         "recontenxtualization",
         "recontextualization",
