save settings.json (user dictionary update)

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -95,6 +95,7 @@
         "Adelina",
         "algo",
         "algos",
+        "alsa",
         "altron",
         "Amruta",
         "anns",
@@ -375,6 +376,7 @@
         "submodule",
         "subscore",
         "subscores",
+        "supressor",
         "Suzie",
         "Suzie's",
         "symlink",
