Clean up stow packages -- move stuff out of ./.config/ and into the appropriate stow_package/... folder - Add .mambarc (stow'ed) - Add stow_packages: electron, chromium, chrome, vscode, omz

--- a/stow_packages/vscode/.config/Code/User/settings.json
+++ b/stow_packages/vscode/.config/Code/User/settings.json
@@ -382,6 +382,7 @@
         "symlink",
         "tenumerate",
         "termcolor",
+        "Tilix",
         "timeit",
         "timm",
         "tini",
@@ -445,7 +446,9 @@
         "yubico",
         "yubikey",
         "zfill",
-        "zotero"
+        "zmodload",
+        "zotero",
+        "zprof"
     ],
     "diffEditor.diffAlgorithm": "advanced",
     "diffEditor.ignoreTrimWhitespace": false,
