--- a/stow_packages/vscode/.config/Code/User/settings.json
+++ b/stow_packages/vscode/.config/Code/User/settings.json
@@ -477,7 +477,8 @@
     "explorer.autoReveal": false,
     "explorer.confirmDelete": false,
     "files.associations": {
-        ".pylintrc": "ini"
+        ".pylintrc": "ini",
+        ".desktop": "ini"
     },
     "files.autoSave": "afterDelay",
     "files.exclude": {
@@ -721,5 +722,73 @@
     "workbench.list.smoothScrolling": true,
     "workbench.settings.openDefaultKeybindings": true,
     "workbench.tree.indent": 15,
-    "remote.SSH.useFlock": false
+    "remote.SSH.useFlock": false,
+    "remote.SSH.path": "/usr/local/ossh/bin/ssh",
+    "remote.SSH.connectTimeout": 30,
+    "workbench.startupEditor": "none",
+    "remote.SSH.defaultExtensions": [
+        "aaron-bond.better-comments",
+        "charliermarsh.ruff",
+        "christian-kohler.path-intellisense",
+        "codezombiech.gitignore",
+        "DavidAnson.vscode-markdownlint",
+        "donjayamanne.githistory",
+        "dunstontc.vscode-docker-syntax",
+        "dunstontc.vscode-gitignore-syntax",
+        "editorconfig.editorconfig",
+        "esbenp.prettier-vscode",
+        "euskadi31.json-pretty-printer",
+        "foxundermoon.shell-format",
+        "george-alisson.html-preview-vscode",
+        "gruntfuggly.todo-tree",
+        "guyskk.language-cython",
+        "jeffersonlicet.snipped",
+        "johnpapa.vscode-peacock",
+        "kriegalex.vscode-cudacpp",
+        "mechatroner.rainbow-csv",
+        "mervin.markdown-formatter",
+        "mgesbert.python-path",
+        "mhutchie.git-graph",
+        "mikestead.dotenv",
+        "mohsen1.prettify-json",
+        "ms-python.black-formatter",
+        "ms-python.debugpy",
+        "ms-python.flake8",
+        "ms-python.isort",
+        "ms-python.mypy-type-checker",
+        "ms-python.pylint",
+        "ms-python.vscode-pylance",
+        "ms-toolsai.jupyter-keymap",
+        "ms-toolsai.jupyter-renderers",
+        "ms-toolsai.jupyter",
+        "ms-toolsai.vscode-jupyter-cell-tags",
+        "ms-toolsai.vscode-jupyter-slideshow",
+        "ms-vscode-remote.remote-ssh-edit",
+        "ms-vscode-remote.remote-ssh",
+        "ms-vscode-remote.vscode-remote-extensionpack",
+        "ms-vscode.cpptools",
+        "ms-vscode.makefile-tools",
+        "ms-vscode.remote-explorer",
+        "natqe.reload",
+        "njpwerner.autodocstring",
+        "oderwat.indent-rainbow",
+        "quilicicf.markdown-spec-formatter",
+        "redhat.vscode-yaml",
+        "richie5um2.vscode-sort-json",
+        "ryu1kn.partial-diff",
+        "shardulm94.trailing-spaces",
+        "shd101wyy.markdown-preview-enhanced",
+        "spikespaz.vscode-smoothtype",
+        "stkb.rewrap",
+        "streetsidesoftware.code-spell-checker",
+        "tamasfe.even-better-toml",
+        "technosophos.vscode-make",
+        "timonwong.shellcheck",
+        "tomoki1207.pdf",
+        "tyriar.sort-lines",
+        "vikas.code-navigation",
+        "voidei.vscode-vimrc",
+        "zaaack.markdown-editor",
+        "ziyasal.vscode-open-in-github",
+    ]
 }
