vscode with wayland and gpu support mostly working.

--- a/stow_packages/usr_share/applications/code.desktop
+++ b/stow_packages/usr_share/applications/code.desktop
@@ -2,8 +2,7 @@
 Name=Visual Studio Code
 Comment=Code Editing. Redefined.
 GenericName=Text Editor
-#Exec=/usr/bin/code --unity-launch %F
-Exec=/usr/bin/code --enable-features=UseOzonePlatform --ozone-platform=wayland --enable-features=WaylandWindowDecorations --ozone-platform-hint=auto --enable-gpu-rasterization --enable-native-gpu-memory-buffers --enable-features=VaapiVideoDecoder --enable-features=VaapiVideoEncoder --enable-accelerated-video --enable-accelerated-video-decode --enable-accelerated-mjpeg-decode --enable-unsafe-webgpu --enable-zero-copy --enable-raw-draw --enable-oop-rasterization --enable-gpu-compositing --enable-skia-graphite --enable-features=WebRTCPipeWireCapturer,UseSkiaRenderer,VaapiVideoDecoder,CanvasOopRasterization,VaapiVideoEncoder,RawDraw --use-vulkan --enable-gpu-memory-buffer-compositor-resources --unity-launch %F
+Exec=bash -c "/usr/local/bin/launch_vscode.sh --unity-launch %F"
 Icon=vscode
 Type=Application
 StartupNotify=false
@@ -24,6 +23,5 @@ Name[ko]=새 빈 창
 Name[ru]=Новое пустое окно
 Name[zh_CN]=新建空窗口
 Name[zh_TW]=開新空視窗
-#Exec=/usr/bin/code --new-window %F
-Exec=/usr/bin/code --enable-features=UseOzonePlatform --ozone-platform=wayland --enable-features=WaylandWindowDecorations --ozone-platform-hint=auto --enable-gpu-rasterization --enable-native-gpu-memory-buffers --enable-features=VaapiVideoDecoder --enable-features=VaapiVideoEncoder --enable-accelerated-video --enable-accelerated-video-decode --enable-accelerated-mjpeg-decode --enable-unsafe-webgpu --enable-zero-copy --enable-raw-draw --enable-oop-rasterization --enable-gpu-compositing --enable-skia-graphite --enable-features=WebRTCPipeWireCapturer,UseSkiaRenderer,VaapiVideoDecoder,CanvasOopRasterization,VaapiVideoEncoder,RawDraw --use-vulkan --enable-gpu-memory-buffer-compositor-resources --new-window %F
+Exec=bash -c "/usr/local/bin/launch_vscode.sh --new-window %F"
 Icon=vscode
