--- a/stow_packages/chrome/.config/chrome-flags.conf
+++ b/stow_packages/chrome/.config/chrome-flags.conf
@@ -3,13 +3,32 @@
 # --disable-features=UseChromeOSDirectVideoDecoder
 
 --enable-features=VaapiVideoDecoder,VaapiVideoEncoder,ParallelDownloading
---enable-zero-copy
---disable-features=UseChromeOSDirectVideoDecoder
+; --disable-features=UseChromeOSDirectVideoDecoder
 # Added 2023-01-22: Purpose is to enable hardware acceleration under wayland:
+--disable-gpu-driver-bug-workaround
 --enable-features=UseOzonePlatform
 --ozone-platform=wayland
+--enable-features=WaylandWindowDecorations
+--ozone-platform-hint=auto
 --ignore-gpu-blocklist
 --enable-gpu-rasterization
---disable-gpu-driver-bug-workarounds
+--enable-native-gpu-memory-buffers
+# todo: remove since it's in the list below
+--enable-features=VaapiVideoDecoder
+# todo: remove since it's in the list below
+--enable-features=VaapiVideoEncoder
+--enable-accelerated-video
 --enable-accelerated-video-decode
+--enable-accelerated-mjpeg-decode
+--enable-unsafe-webgpu
+--enable-zero-copy
+--enable-raw-draw
+--enable-oop-rasterization
+--canvas-oop-rasterization
+--enable-gpu-compositing
+--enable-skia-graphite
+--enable-features=WebRTCPipeWireCapturer,UseSkiaRenderer,VaapiVideoDecoder,CanvasOopRasterization,VaapiVideoEncoder,RawDraw
+--use-vulkan
+--enable-gpu-memory-buffer-compositor-resources
+
 
