--- a/stow_packages/vscode/.config/Code/User/settings.json
+++ b/stow_packages/vscode/.config/Code/User/settings.json
@@ -114,6 +114,7 @@
         "asynch",
         "autopep",
         "BAIR",
+        "bairdev",
         "Barreleye",
         "batchify",
         "bbox",
@@ -149,6 +150,7 @@
         "cookiecutter",
         "coronavirus",
         "covid",
+        "cpan",
         "ctdet",
         "cthu",
         "cuda",
@@ -163,6 +165,7 @@
         "datalake",
         "datapoints",
         "datasets",
+        "dconf",
         "dconfig",
         "dealscore",
         "deepfake",
@@ -201,6 +204,7 @@
         "fsdet",
         "fvcore",
         "gbiamby",
+        "gcloud",
         "geoguessr",
         "geospatial",
         "Gerken",
@@ -210,6 +214,7 @@
         "Giscard",
         "Giscard's",
         "Gitlab",
+        "gitup",
         "Glip",
         "GPU's",
         "gpus",
@@ -243,6 +248,7 @@
         "itertools",
         "itertuples",
         "jaccard",
+        "jpegoptim",
         "jsons",
         "Jupyter",
         "Kaggle",
@@ -300,6 +306,7 @@
         "operationalized",
         "operationalizing",
         "optim",
+        "optipng",
         "orgs",
         "owncloud",
         "panopticapi",
@@ -307,6 +314,7 @@
         "patchified",
         "patchify",
         "pdf's",
+        "pigz",
         "popd",
         "Popen",
         "Posix",
@@ -424,11 +432,13 @@
         "vocoding",
         "vscode's",
         "vstack",
+        "wakeonlan",
         "wandb",
         "webdav",
         "webdavs",
         "WLOG",
         "WORKDIR",
+        "xclip",
         "xmax",
         "xmin",
         "xrange",
@@ -618,7 +628,9 @@
     "python.testing.autoTestDiscoverOnSaveEnabled": false,
     "redhat.telemetry.enabled": false,
     "remote.SSH.remotePlatform": {
-        "angler": "linux"
+        "angler": "linux",
+        "nautilus": "linux",
+        "raider": "linux"
     },
     "remote.SSH.showLoginTerminal": true,
     "rewrap.wrappingColumn": 88,
@@ -789,5 +801,6 @@
         "voidei.vscode-vimrc",
         "zaaack.markdown-editor",
         "ziyasal.vscode-open-in-github",
-    ]
+    ],
+    "terminal.integrated.cursorStyle": "line"
 }
