Clean up extensions lists
(cherry picked from commit bf415121173af12d05464c8d08706309dd57e182)

--- a/stow_packages/vscode/.config/Code/User/settings.json
+++ b/stow_packages/vscode/.config/Code/User/settings.json
@@ -739,6 +739,7 @@
     "remote.SSH.connectTimeout": 30,
     "remote.SSH.defaultExtensions": [
         "aaron-bond.better-comments",
+        "betwo.vscode-linux-binary-preview",
         "charliermarsh.ruff",
         "christian-kohler.path-intellisense",
         "codezombiech.gitignore",
@@ -753,15 +754,18 @@
         "george-alisson.html-preview-vscode",
         "gruntfuggly.todo-tree",
         "guyskk.language-cython",
+        "james-yu.latex-workshop",
         "jeffersonlicet.snipped",
         "johnpapa.vscode-peacock",
         "kriegalex.vscode-cudacpp",
+        "mathematic.vscode-latex",
         "mechatroner.rainbow-csv",
         "mervin.markdown-formatter",
         "mgesbert.python-path",
         "mhutchie.git-graph",
         "mikestead.dotenv",
         "mohsen1.prettify-json",
+        "ms-azuretools.vscode-docker",
         "ms-python.black-formatter",
         "ms-python.debugpy",
         "ms-python.flake8",
@@ -782,15 +786,19 @@
         "natqe.reload",
         "njpwerner.autodocstring",
         "oderwat.indent-rainbow",
+        "p1c2u.docker-compose",
         "quilicicf.markdown-spec-formatter",
         "redhat.vscode-yaml",
+        "redhat.vscode-xml",
         "richie5um2.vscode-sort-json",
         "ryu1kn.partial-diff",
         "shardulm94.trailing-spaces",
         "shd101wyy.markdown-preview-enhanced",
+        "sissel.shopify-liquid",
         "spikespaz.vscode-smoothtype",
         "stkb.rewrap",
         "streetsidesoftware.code-spell-checker",
+        "takumii.markdowntable",
         "tamasfe.even-better-toml",
         "technosophos.vscode-make",
         "timonwong.shellcheck",
