--- a/stow_packages/usr_share/applications/code.desktop
+++ b/stow_packages/usr_share/applications/code.desktop
@@ -11,6 +11,7 @@ Categories=TextEditor;Development;IDE;
 MimeType=text/plain;inode/directory;application/x-code-workspace;
 Actions=new-empty-window;
 Keywords=vscode;
+X-Desktop-File-Install-Version=0.26
 
 [Desktop Action new-empty-window]
 Name=New Empty Window
