Fix obsidian to use wayland. move vscode .desktop files to ~/.share/applications/

--- a/stow_packages/electron/.config/electron-flags.conf
+++ b/stow_packages/electron/.config/electron-flags.conf
@@ -6,9 +6,8 @@
 ; --disable-features=UseChromeOSDirectVideoDecoder
 # Added 2023-01-22: Purpose is to enable hardware acceleration under wayland:
 --disable-gpu-driver-bug-workaround
---enable-features=UseOzonePlatform
+--enable-features=UseOzonePlatform,WaylandWindowDecorations
 --ozone-platform=wayland
---enable-features=WaylandWindowDecorations
 --ozone-platform-hint=auto
 --ignore-gpu-blocklist
 --enable-gpu-rasterization
