--- a/stow_packages/vscode/.config/Code/User/settings.json
+++ b/stow_packages/vscode/.config/Code/User/settings.json
@@ -342,6 +342,7 @@
         "pytest",
         "pythonhosted",
         "PYTHONPATH",
+        "PYTHONUNBUFFERED",
         "pytorch",
         "querry",
         "randn",
@@ -364,6 +365,7 @@
         "Rohrbach",
         "roibatch",
         "rpartition",
+        "rptx",
         "rtype",
         "s",
         "savez",
@@ -381,6 +383,7 @@
         "Slurm",
         "Snopes",
         "sqlalchemy",
+        "submitit",
         "submodule",
         "subscore",
         "subscores",
@@ -428,6 +431,7 @@
         "vggoriginal",
         "visdrone",
         "visualnews",
+        "vitb",
         "vmcondev",
         "vocoding",
         "vscode's",
@@ -488,7 +492,9 @@
     "explorer.confirmDelete": false,
     "files.associations": {
         ".pylintrc": "ini",
-        ".desktop": "ini"
+        ".desktop": "ini",
+        ".slurm": "bash",
+        ".out": "text"
     },
     "files.autoSave": "afterDelay",
     "files.exclude": {
@@ -727,7 +733,8 @@
     "workbench.editor.revealIfOpen": true,
     "workbench.editor.wrapTabs": true,
     "workbench.editorAssociations": {
-        "*.ipynb": "jupyter-notebook"
+        "*.ipynb": "jupyter-notebook",
+        "*.out": "default"
     },
     "workbench.iconTheme": "vscode-icons",
     "workbench.list.fastScrollSensitivity": 9,
@@ -743,10 +750,12 @@
         "charliermarsh.ruff",
         "christian-kohler.path-intellisense",
         "codezombiech.gitignore",
-        "DavidAnson.vscode-markdownlint",
+        "danielnichols.slurm-dashboard",
+        "davidanson.vscode-markdownlint",
         "donjayamanne.githistory",
         "dunstontc.vscode-docker-syntax",
         "dunstontc.vscode-gitignore-syntax",
+        "earthslurm.stql",
         "editorconfig.editorconfig",
         "esbenp.prettier-vscode",
         "euskadi31.json-pretty-printer",
@@ -757,7 +766,9 @@
         "james-yu.latex-workshop",
         "jeffersonlicet.snipped",
         "johnpapa.vscode-peacock",
+        "juupje.slurmassist",
         "kriegalex.vscode-cudacpp",
+        "lamborghinious.auto-scroll",
         "mathematic.vscode-latex",
         "mechatroner.rainbow-csv",
         "mervin.markdown-formatter",
@@ -765,6 +776,7 @@
         "mhutchie.git-graph",
         "mikestead.dotenv",
         "mohsen1.prettify-json",
+        "mousavian.ssh-config-syntax-highlighter",
         "ms-azuretools.vscode-docker",
         "ms-python.black-formatter",
         "ms-python.debugpy",
@@ -772,26 +784,38 @@
         "ms-python.isort",
         "ms-python.mypy-type-checker",
         "ms-python.pylint",
+        "ms-python.python",
         "ms-python.vscode-pylance",
+        "ms-toolsai.jupyter",
         "ms-toolsai.jupyter-keymap",
         "ms-toolsai.jupyter-renderers",
-        "ms-toolsai.jupyter",
         "ms-toolsai.vscode-jupyter-cell-tags",
         "ms-toolsai.vscode-jupyter-slideshow",
-        "ms-vscode-remote.remote-ssh-edit",
+        "ms-vscode-remote.remote-containers",
         "ms-vscode-remote.remote-ssh",
+        "ms-vscode-remote.remote-ssh-edit",
+        "ms-vscode-remote.remote-wsl",
         "ms-vscode-remote.vscode-remote-extensionpack",
         "ms-vscode.cpptools",
+        "ms-vscode.cpptools-themes",
         "ms-vscode.remote-explorer",
+        "ms-vscode.remote-server",
+        "ms-vscode.wordcount",
+        "ms-vsliveshare.vsliveshare",
         "natqe.reload",
         "njpwerner.autodocstring",
         "oderwat.indent-rainbow",
+        "origamid.origamid-theme",
         "p1c2u.docker-compose",
+        "philsinatra.popping-and-locking-vscode-black",
+        "pkief.material-icon-theme",
         "quilicicf.markdown-spec-formatter",
-        "redhat.vscode-yaml",
         "redhat.vscode-xml",
+        "redhat.vscode-yaml",
         "richie5um2.vscode-sort-json",
         "ryu1kn.partial-diff",
+        "sabertazimi.latex-snippets",
+        "sebastian-lay.auto-reload",
         "shardulm94.trailing-spaces",
         "shd101wyy.markdown-preview-enhanced",
         "sissel.shopify-liquid",
@@ -806,8 +830,10 @@
         "tyriar.sort-lines",
         "vikas.code-navigation",
         "voidei.vscode-vimrc",
+        "xshrim.txt-syntax",
         "zaaack.markdown-editor",
         "ziyasal.vscode-open-in-github",
     ],
-    "terminal.integrated.cursorStyle": "line"
+    "terminal.integrated.cursorStyle": "line",
+    "slurm-dashboard.job-dashboard.showJobInfo": true
 }
