--- a/stow_packages/vscode/.config/Code/User/settings.json
+++ b/stow_packages/vscode/.config/Code/User/settings.json
@@ -305,12 +305,14 @@
         "ndarray",
         "nepochs",
         "neuropaths",
+        "NGPUS",
         "Nitesh",
         "nltk",
         "noqa",
         "norecursedirs",
         "nprocs",
         "ntasks",
+        "NUMEXPR",
         "numpy",
         "nunique",
         "onnx",
@@ -780,7 +782,7 @@
     "workbench.tree.indent": 15,
     "remote.SSH.useFlock": false,
     "remote.SSH.path": "/usr/local/ossh/bin/ssh",
-    "remote.SSH.connectTimeout": 30,
+    "remote.SSH.connectTimeout": 120,
     "remote.SSH.defaultExtensions": [
         "aaron-bond.better-comments",
         "betwo.vscode-linux-binary-preview",
@@ -874,4 +876,5 @@
     "terminal.integrated.cursorStyle": "line",
     "slurm-dashboard.job-dashboard.showJobInfo": true,
     "editor.minimap.autohide": true,
+    "slurm-dashboard.job-dashboard.refreshInterval": 30,
 }
